2008-12-02  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Task Launcher refactor. Separated UI and data into different classes.
	Also updates to latest UI spec.
	Fixes: NB#92644, NB#89202, NB#88460
	
	* src/home/hd-switcher.c: Changes to new HdLauncher API.
	* src/launcher/Makefile.am:
	* src/launcher/hd-launcher-app.c: Removed UI.
	* src/launcher/hd-launcher-app.h:
	* src/launcher/hd-launcher-cat.c: Removed UI.
	* src/launcher/hd-launcher-cat.h:
	* src/launcher/hd-launcher-grid.c: New UI actor, keeps the app grid.
	* src/launcher/hd-launcher-grid.h:
	* src/launcher/hd-launcher-item.c:
	* src/launcher/hd-launcher-item.h:
	* src/launcher/hd-launcher-page.c: New UI actor, shows a whole app
	category.
	* src/launcher/hd-launcher-page.h:
	* src/launcher/hd-launcher-tile.c: New UI actor, shows an app icon and
	label.
	* src/launcher/hd-launcher-tile.h:
	* src/launcher/hd-launcher-tree.c:
	* src/launcher/hd-launcher.c: New HdLauncher singleton, 
	* src/launcher/hd-launcher.h:
	* tests/test-launcher.c:

2008-12-02  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-theme.c: Patch from Laszlo to keep a reference count in
	the close button, avoiding a crash in certain case. Fixes: NB#93472

2008-12-02  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-switcher.c:
	  Enter the switcher without zooming if the topmost "visible" client
	  /to matchbox' knowledge/ is not visible after all, as it happens
	  after closing the app in application view.

2008-12-02  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-app.c: hd_app_show(), hd_app_destroy():
	  Hide the switcher (Tasks button) when we are showing fullscreen.

2008-12-02  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* src/home/hd-home.c: Set _NET_CURRENT_DESKTOP and
	_NET_NUMBER_OF_DESKTOPS according to the current view,
	and honour _NET_CURRENT_DESKTOP being set to change the current view.
	Closes #93720.

2008-12-01  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
